# k8s-version-checker

./: .gitignore  Cargo.toml  Dockerfile  GNUmakefile  LICENSE.md  README.md  container_image.go  container_image_test.go  docker-compose.test.yml  go.mod  go.sum  k8s-cron-job.yml  requirements.txt  version-checker.py  version_checker.go  version_checker.py  version_checker_test.py
src/: k8s.rs  lib.rs  main.rs  registry.rs
tests/: version_checker_test.py
version_checker/: __main__.py  k8s.py  notification.py  registry.py
version_checker/k8s/: __init__.py  cronjobs.py  daemon_sets.py  deployments.py  model.py  pods.py  stateful_sets.py
