[package]
name = "k8s-version-checker"
version = "0.1.0"
authors = ["Andrew Rowson <github@growse.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
parameterized = "0.1.1"
kube = "0.30.0"
futures = "0.3.4"
k8s-openapi = { version = "0.7.1", default-features = false, features = ["v1_17"] }